docs/0.14/_sources/api/gammapy.modeling.models.SkyDiffuseCube.rst.txt
SkyDiffuseCube
==============

.. currentmodule:: gammapy.modeling.models

.. autoclass:: SkyDiffuseCube
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SkyDiffuseCube.evaluation_radius
      ~SkyDiffuseCube.frame
      ~SkyDiffuseCube.map
      ~SkyDiffuseCube.meta
      ~SkyDiffuseCube.norm
      ~SkyDiffuseCube.parameters
      ~SkyDiffuseCube.position
      ~SkyDiffuseCube.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~SkyDiffuseCube.__call__
      ~SkyDiffuseCube.copy
      ~SkyDiffuseCube.create
      ~SkyDiffuseCube.evaluate
      ~SkyDiffuseCube.evaluate_geom
      ~SkyDiffuseCube.from_dict
      ~SkyDiffuseCube.read
      ~SkyDiffuseCube.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: evaluation_radius
   .. autoattribute:: frame
   .. autoattribute:: map
   .. autoattribute:: meta
   .. autoattribute:: norm
   .. autoattribute:: parameters
   .. autoattribute:: position
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: read
   .. automethod:: to_dict
