docs/0.17/_sources/api/gammapy.modeling.models.SkyDiffuseCube.rst.txt
SkyDiffuseCube
==============

.. currentmodule:: gammapy.modeling.models

.. autoclass:: SkyDiffuseCube
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SkyDiffuseCube.covariance
      ~SkyDiffuseCube.default_parameters
      ~SkyDiffuseCube.evaluation_radius
      ~SkyDiffuseCube.frame
      ~SkyDiffuseCube.name
      ~SkyDiffuseCube.norm
      ~SkyDiffuseCube.parameters
      ~SkyDiffuseCube.position
      ~SkyDiffuseCube.reference
      ~SkyDiffuseCube.tag
      ~SkyDiffuseCube.tilt

   .. rubric:: Methods Summary

   .. autosummary::

      ~SkyDiffuseCube.__call__
      ~SkyDiffuseCube.copy
      ~SkyDiffuseCube.create
      ~SkyDiffuseCube.evaluate
      ~SkyDiffuseCube.evaluate_geom
      ~SkyDiffuseCube.from_dict
      ~SkyDiffuseCube.from_parameters
      ~SkyDiffuseCube.integrate_geom
      ~SkyDiffuseCube.read
      ~SkyDiffuseCube.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: evaluation_radius
   .. autoattribute:: frame
   .. autoattribute:: name
   .. autoattribute:: norm
   .. autoattribute:: parameters
   .. autoattribute:: position
   .. autoattribute:: reference
   .. autoattribute:: tag
   .. autoattribute:: tilt

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integrate_geom
   .. automethod:: read
   .. automethod:: to_dict
